--- a/app/src/main/res/layout/forward.xml
+++ b/app/src/main/res/layout/forward.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingStart="8dp"
-    tools:context=".ActivityForwarding">
+    tools:context="com.simpletool.datasaving.ActivityForwarding">
 
     <LinearLayout
         android:layout_width="match_parent"
