--- a/app/src/main/res/xml/predefined.xml
+++ b/app/src/main/res/xml/predefined.xml
@@ -10,10 +10,10 @@
 
     <wifi
         blocked="false"
-        package="eu.faircode.netguard" />
+        package="com.simpletool.datasaving" />
     <other
         blocked="false"
-        package="eu.faircode.netguard"
+        package="com.simpletool.datasaving"
         roaming="false" />
 
     <wifi
